# app/main.py
@@ -4,6 +4,7 @@ import yaml
 from fastapi import FastAPI
 from fastapi.responses import RedirectResponse
 
+from app.metrics import metrics, prometheus_middleware
 from app.routers import bookings, fines, registration
 
 app = FastAPI(
@@ -12,6 +13,8 @@ app = FastAPI(
     version="1.0.0",
     docs_url="/docs",
 )
+
+app.middleware("http")(prometheus_middleware)
 
 app.include_router(registration.router)
 app.include_router(bookings.router)
@@ -26,6 +29,9 @@ async def root() -> RedirectResponse:
 @app.get("/swagger", include_in_schema=False)
 async def swagger() -> RedirectResponse:
     return RedirectResponse(url="/docs")
+
+
+app.add_api_route("/metrics", metrics, methods=["GET"], include_in_schema=False)
 
 
 def custom_openapi() -> dict:
